--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cs-gordons",
+  "name": "rob",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
-    "gsap": "^3.10.2",
-    "popper.js": "^1.16.1",
+    "gsap": "^3.11.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -22,9 +21,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jquery": "^3.6.0",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0"
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
