--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [deploy]
-deploy_server ansible_host=DEPLOY_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/ansible-deploy-key
+deploy_server ansible_host=35.177.247.238 ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/ansible-deploy-key
