update docker.yml trigger-token

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Trigger Jenkins Deployment
         run: |
           curl -u "robert:${{ secrets.JENKINS_API_TOKEN }}" -X POST \
-          "http://${{ secrets.JENKINS_URL }}/job/deploy-django/build?token=${{ secrets.JENKINS_API_TOKEN }}"
+          "http://${{ secrets.JENKINS_URL }}/job/deploy-django/build?token=${{ secrets.JENKINS_TRIGGER_TOKEN }}"
